Adding a colorful Atm machine

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "atm-pin-card",
+  "name": "rzk123-atm-pin-card",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "type": "module",
+  "bin": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
